plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.2'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.app.login'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Spring Boot dependencies
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-web-services'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // Spring Security
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // Spring Data JPA and Database (Choose one: H2 for in-memory testing, or MySQL/PostgreSQL)
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    runtimeOnly 'com.h2database:h2'  // For in-memory DB during development
    // runtimeOnly 'mysql:mysql-connector-java'  // Use if you need MySQL
    // runtimeOnly 'org.postgresql:postgresql'  // Use if you need PostgreSQL

    // JSP Support (if you're using JSPs for views, otherwise remove)
    runtimeOnly 'org.apache.tomcat.embed:tomcat-embed-jasper:10.1.29'
    runtimeOnly 'org.glassfish.web:jakarta.servlet.jsp.jstl:3.0.0'

    // Development tools
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // Testing dependencies
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'  // Security testing
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}
dependencies {
    implementation 'org.springframework.security:spring-security-taglibs:5.8.0' // Use latest version
    implementation 'javax.servlet:jstl:1.2' // Ensure JSTL is also included
}

